--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,6 @@ env
 .DS_Store
 local_settings.py
 _local_settings.py
-gunicorn-error-log
-db.sqlite3
-db copy.sqlite3
+
+# Add again for course purpose
+!db.sqlite3
